--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,9 @@ jobs:
         java-version: '17'
 
     - name: Build with Gradle
-      run: ./gradlew clean build -x test
+      run: |
+        chmod +x gradlew  # 실행 권한 추가
+        ./gradlew clean build -x test
 
     - name: Deploy to Tomcat
       env:
